# delphi_api_lib/src/models/mod.rs
@@ -1,2 +1,2 @@
 mod auth;
-pub use auth::{Session, User, Password};
+pub use auth::{Session, User, Password, UserProfile};
